@@ -6,6 +6,7 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import stud.ntnu.idatt1005.pantrypal.models.Grocery;
+import stud.ntnu.idatt1005.pantrypal.models.Model;
 
 import java.util.Map;
 
@@ -23,8 +24,8 @@ class TestGroceryRegister {
     grocery1 = new Grocery("Milk", 1, "Dairy", null);
     grocery2 = new Grocery("Bread", 2, "Bakery", null);
 
-    groceryRegister.addGrocery(grocery1);
-    groceryRegister.addGrocery(grocery2);
+    groceryRegister.addItem(grocery1);
+    groceryRegister.addItem(grocery2);
   }
 
   @Nested
@@ -36,7 +37,7 @@ class TestGroceryRegister {
 
       String groceryName = "Eggs";
       Grocery grocery3 = new Grocery(groceryName, 12, "Dairy", null);
-      newGroceryRegister.addGrocery(new Grocery(grocery3));
+      newGroceryRegister.addItem(new Grocery(grocery3));
 
       assertAll(
           () -> assertEquals(grocery3.toString(), newGroceryRegister.getGrocery(groceryName).toString(), "Grocery not added to register"),
@@ -51,8 +52,8 @@ class TestGroceryRegister {
     @DisplayName("Test of get grocery")
     void getGrocery() {
       assertAll("Get grocery",
-          () -> assertEquals(grocery1.toString(), groceryRegister.getGrocery(grocery1.getName()).toString(), "Incorrect grocery retrieved"),
-          () -> assertEquals(grocery2.toString(), groceryRegister.getGrocery(grocery2.getName()).toString(), "Incorrect grocery retrieved"))
+          () -> assertEquals(grocery1.toString(), groceryRegister.getGrocery(grocery1.getKey()).toString(), "Incorrect grocery retrieved"),
+          () -> assertEquals(grocery2.toString(), groceryRegister.getGrocery(grocery2.getKey()).toString(), "Incorrect grocery retrieved"))
       ;
     }
 
@@ -68,11 +69,11 @@ class TestGroceryRegister {
     @Test
     @DisplayName("Test of get register")
     void getRegister() {
-      Map<String, Grocery> actual = groceryRegister.getRegister();
+      Map<String, Model> actual = groceryRegister.getRegisterMap();
 
       assertAll("Get register",
-          () -> assertEquals(grocery1.toString(), actual.get(grocery1.getName()).toString(), "Incorrect grocery retrieved"),
-          () -> assertEquals(grocery2.toString(), actual.get(grocery2.getName()).toString(), "Incorrect grocery retrieved"));
+          () -> assertEquals(grocery1.toString(), actual.get(grocery1.getKey()).toString(), "Incorrect grocery retrieved"),
+          () -> assertEquals(grocery2.toString(), actual.get(grocery2.getKey()).toString(), "Incorrect grocery retrieved"));
     }
   }
 
@@ -83,25 +84,25 @@ class TestGroceryRegister {
     @DisplayName("Test of add grocery with new grocery")
     void addGrocery() {
       Grocery grocery3 = new Grocery("Eggs", 12, "Dairy", null);
-      groceryRegister.addGrocery(grocery3);
+      groceryRegister.addItem(grocery3);
 
-      assertEquals(grocery3.toString(), groceryRegister.getGrocery(grocery3.getName()).toString(), "Grocery not added");
+      assertEquals(grocery3.toString(), groceryRegister.getGrocery(grocery3.getKey()).toString(), "Grocery not added");
     }
 
     @Test
     @DisplayName("Test of add grocery with grocery that already exists")
     void addGroceryAlreadyExists() {
       Grocery grocery3 = new Grocery("Milk", 1, "Dairy", null);
-      assertThrows(IllegalArgumentException.class, () -> groceryRegister.addGrocery(grocery3), "Grocery does not exist in register");
+      assertThrows(IllegalArgumentException.class, () -> groceryRegister.addItem(grocery3), "Grocery does not exist in register");
     }
 
     @Test
     @DisplayName("Test of add grocery with deep copy of grocery")
     void addGroceryDeepCopyOfGrocery() {
       Grocery grocery3 = new Grocery("Eggs", 12, "Dairy", null);
-      groceryRegister.addGrocery(grocery3);
+      groceryRegister.addItem(grocery3);
 
-      assertNotEquals(grocery3, groceryRegister.getGrocery(grocery3.getName()), "Grocery is not a deep copy");
+      assertNotEquals(grocery3, groceryRegister.getGrocery(grocery3.getKey()), "Grocery is not a deep copy");
     }
   }
 
@@ -110,35 +111,37 @@ class TestGroceryRegister {
     @Test
     @DisplayName("Test of remove grocery")
     void removeGrocery() {
-      String groceryName = grocery1.getName();
-      groceryRegister.removeGrocery(groceryName);
+      String gKey = grocery1.getKey();
+      groceryRegister.removeItem(grocery1);
 
-      assertThrows(IllegalArgumentException.class, () -> groceryRegister.getGrocery(groceryName), "Grocery exists in register");
+      assertThrows(IllegalArgumentException.class, () -> groceryRegister.getGrocery(gKey), "Grocery exists in register");
     }
 
     @Test
     @DisplayName("Test of remove grocery with grocery that does not exist")
     void removeGroceryDoesNotExist() {
-      assertThrows(IllegalArgumentException.class, () -> groceryRegister.removeGrocery("Eggs"), "Grocery exists in register");
+      Grocery fakeGrocery = new Grocery("Eggs", 12, "Dairy", null);
+      assertThrows(IllegalArgumentException.class, () -> groceryRegister.removeItem(fakeGrocery)
+          , "Grocery exists in register");
     }
 
     @Test
     @DisplayName("Test of sort groceries in ascending order")
     void sortGroceriesAscending(){
-      List<Grocery> sortedGroceries = groceryRegister.sortGroceriesAscending();
+      List<Model> sortedGroceries = groceryRegister.sortItemsAscending();
 
       assertAll("Sort groceries in ascending order",
-          () -> assertEquals(grocery2.toString(), sortedGroceries.get(0).toString(), "Grocery not sorted in ascending order"),
+          () -> assertEquals(grocery2.toString(), sortedGroceries.getFirst().toString(), "Grocery not sorted in ascending order"),
           () -> assertEquals(grocery1.toString(), sortedGroceries.get(1).toString(), "Grocery not sorted in ascending order"));
     }
 
     @Test
     @DisplayName("Test of sort groceries in descending order")
     void sortGroceriesDescending(){
-      List<Grocery> sortedGroceries = groceryRegister.sortGroceriesDescending();
+      List<Model> sortedGroceries = groceryRegister.sortItemsDescending();
 
       assertAll("Sort groceries in descending order",
-          () -> assertEquals(grocery1.toString(), sortedGroceries.get(0).toString(), "Grocery not sorted in descending order"),
+          () -> assertEquals(grocery1.toString(), sortedGroceries.getFirst().toString(), "Grocery not sorted in descending order"),
           () -> assertEquals(grocery2.toString(), sortedGroceries.get(1).toString(), "Grocery not sorted in descending order"));
     }
   }
